--- a/package.json
+++ b/package.json
@@ -4,18 +4,32 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@go1d/go1d": "^8.4.1",
+    "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^0.26.1",
+    "emotion-server": "^9.2.12",
+    "lodash": "^4.17.21",
     "next": "12.1.0",
+    "openapi-types": "^10.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^8.0.1",
+    "react-modal-hook": "^3.0.0",
+    "react-redux": "^7.2.8",
+    "react-syntax-highlighter": "^15.5.0",
+    "slate-plain-serializer": "^0.7.13",
+    "swagger-parser": "^10.0.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "@types/node": "17.0.22",
     "@types/react": "17.0.42",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "typescript": "4.6.2"
