--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@go1d/go1d": "^8.4.1",
     "@reduxjs/toolkit": "^1.8.1",
     "axios": "^0.26.1",
+    "base-64": "^1.0.0",
     "emotion-server": "^9.2.12",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "12.1.0",
     "openapi-types": "^10.0.0",
@@ -26,6 +28,7 @@
     "swagger-parser": "^10.0.3"
   },
   "devDependencies": {
+    "@types/base-64": "^1.0.0",
     "@types/lodash": "^4.14.180",
     "@types/node": "17.0.22",
     "@types/react": "17.0.42",
