--- a/package.json
+++ b/package.json
@@ -11,15 +11,21 @@
   "dependencies": {
     "@go1d/go1d": "^8.4.1",
     "@reduxjs/toolkit": "^1.8.1",
+    "ace-builds": "^1.4.14",
     "axios": "^0.26.1",
+    "axios-hooks": "^3.0.1",
     "base-64": "^1.0.0",
     "emotion-server": "^9.2.12",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
-    "next": "12.1.0",
+    "msw": "^0.39.2",
+    "next": "^12.1.4",
+    "next-remove-imports": "^1.0.6",
     "openapi-types": "^10.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.0.0-rc.3",
+    "react-ace": "^9.5.0",
+    "react-contenteditable": "^3.3.6",
+    "react-dom": "^18.0.0-rc.3",
     "react-markdown": "^8.0.1",
     "react-modal-hook": "^3.0.0",
     "react-redux": "^7.2.8",
